--- a/deployment/config/models.yaml
+++ b/deployment/config/models.yaml
@@ -1,18 +1,10 @@
-vint: 
-  config_path: "../../train/config/vint.yaml"
-  ckpt_path: "../model_weights/vint.pth"
-
-late_fusion: 
-  config_path: "../../train/config/late_fusion.yaml"
-  ckpt_path: "../model_weights/vint_late_fusion.pth"
-
-gnm: 
-  config_path: "../../train/config/gnm.yaml"
-  ckpt_path: "../model_weights/gnm_large.pth"
-
 nomad: 
   config_path: "../../train/config/nomad.yaml"
-  ckpt_path: "../model_weights/nomad.pth"
+  ckpt_path: "../checkpoints/nomad.pth"
+
+navidiffusor: 
+  config_path: "../../train/config/nomad.yaml"
+  ckpt_path: "../checkpoints/navidiffusor.pth"
 
 
 # add your own model configs here after saving the *.pth file to ../model_weight
