--- a/train/config/decoder.yaml
+++ b/train/config/decoder.yaml
@@ -2,18 +2,15 @@
 latent_n_channels: 1280  # EfficientNet-B0 output size
 gaussian_latent_dim: 768  # Dimension of Gaussian latent space
 constant_size: [3, 3]    # Initial constant tensor size in StyleGAN decoder
-loss_type: "l1"    # Options: "l1", "mse", "combined"
-lambda1: 0.5             # L1 loss weight
-lambda2: 0.3             # LPIPS loss weight  
-lambda3: 0.2             # SSIM loss weight
-use_mixed_precision: true
+loss_type: "elbo"    # Options: "l1", "mse", "combined"
 
 # Training parameters
 batch_size: 64
-num_workers: 12
-lr: 3e-4
+num_workers: 4
+lr: 2e-4
 weight_decay: 15e-5
 max_epochs: 200
+warmup_epochs: 50
 min_sequence_length: 1
 image_size: [96, 96]
 dataset_name: "recon"
@@ -24,10 +21,11 @@ data_split_folder: "/home/naren/NaviD/train/vint_train/data/data_splits/recon"
 output_dir: "/home/naren/NaviD/train/outputs/decoder_model"
 
 # WandB logging
-wandb: true
+wandb: falses
 wandb_project: "rgb_decoder"
 
 # Training setup
 pretrained: ''
-devices: [0,1]
+resume: ''
+devices: [0]
 precision: "bf16-mixed"
